# prooflink-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: README.md
examples/claude-desktop/: README.md  claude_desktop_config.json
examples/crewai/: README.md  crew.py  requirements.txt
examples/fastapi/: README.md  app.py  requirements.txt
examples/langgraph/: README.md  agent.py  requirements.txt
examples/nextjs/: README.md  package.json
examples/nextjs/app/api/verify/[id]/: route.ts
examples/nextjs/app/proof/: page.tsx
node/: index.d.ts  index.js  index.mjs  package.json  test.js
prooflink/: __init__.py  __main__.py  crypto.py
python/: setup.py
python/prooflink/: __init__.py  client.py
python/tests/: test_client.py
tests/: test_verify.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/test/: verify.test.mjs
typescript/test/fixtures/: v3_samples.json
