[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prooflink"
version = "1.1.1"
description = "ProofLink SDK — seal and verify cryptographically-chained, Bitcoin-anchored receipts"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "iTechSmart Inc." }]
keywords = ["prooflink", "audit", "receipts", "bitcoin", "opentimestamps", "verifiable"]
# verify()/verify_receipt() use Ed25519 from `cryptography` (the same library
# as the published reference verifier). seal()/verify_chain()/recent()/stats()
# are stdlib-only. Install the [verify] extra (or the base dep) for crypto verify.
dependencies = ["cryptography>=41.0"]

[project.scripts]
prooflink = "prooflink.__main__:main"

[tool.setuptools]
packages = ["prooflink"]

[tool.setuptools.package-data]
prooflink = ["py.typed"]

[project.urls]
Homepage = "https://prooflink.itechsmart.dev"
Repository = "https://github.com/Iteksmart/prooflink-sdk"
"Live Ledger" = "https://verify.itechsmart.dev"
